--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "prod": "ng build --prod --base-href https://taiyouftw.github.io/mySmoothCarousel/",
-    "github": "ngh --dir=dist/mySmoothCarousel"
+    "github": "ngh --dir=dist/mySmoothCarousel",
+    "mobile": "ng serve --host 0.0.0.0"
   },
   "private": true,
   "dependencies": {
